# lca-domain-embedding

./: .gitignore  README.ZH.md  README.md  pyproject.toml  report.ZH.md  report.md
.claude/commands/: git-commit.md  update-docs.md  verify-docs.md
config/: ds_stage0.json  ds_stage2.json
data/output/lca-qwen3-embedding/: README.md
scripts/: README.md
scripts/legacy/: evaluate.py  finetune.sh  scripts_overview.md
scripts/pipeline/: 01_generate_markdown.py  02_generate_queries.py  02_generate_single.py  03_prepare_ft_data.py  04_finetune_st.py  04_finetune_st.sh  05_cache_embeddings.py  06_evaluate_cached.py  07_evaluate_st.py
scripts/tools/: apply_hard_negatives.py  cache_markdown_embeddings.py  check_bf16_env.py  compare_pair_similarity.py  convert_to_gguf.sh  download_model.py  evaluate_similarity_gaps.py  export_embedding_atlas_dataset.py  export_embedding_atlas_markdown_dir.py  export_supabase_json_ordered.py  mine_hard_negatives.py  upload_hf_model.py  upload_ollama_model.sh
src/: cal_similarity.py  embedding.py  pre_process.py  visualize_similarity.py
src/config/: model.py
src/embed/: cache.py
src/eval/: metrics.py
src/prep/: data_prep.py
src/report/: render.py
src/utils/: __init__.py  llm_generate_query.py  process_to_markdown.py
